# luxchallenges

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
challenge.00/: CMakeLists.txt  README.md
challenge.00/bench/: CMakeLists.txt  main.cpp
challenge.00/example/: CMakeLists.txt  main.cpp
challenge.00/include/anonymous/: task.hpp
challenge.00/include/asumaneev/: task.hpp
challenge.00/src/: main.cpp  main.hpp  main_bench.cpp
challenge.00/src/anonymous/: CMakeLists.txt  task.cpp
challenge.00/src/asumaneev/: CMakeLists.txt
challenge.00/test/: CMakeLists.txt
challenge.00/test/src/: test.cpp
challenge.01/: CMakeLists.txt  README.md
challenge.01/bench/: CMakeLists.txt  main.cpp
challenge.01/example/: CMakeLists.txt  main.cpp
challenge.01/include/asumaneev/: task.hpp
challenge.01/src/asumaneev/: CMakeLists.txt
challenge.01/test/: CMakeLists.txt
challenge.01/test/src/: test.cpp
challenge.01/test/test_data/: fourth_sequence.in  third_sequence.in
challenge.02/: CMakeLists.txt  README.md
challenge.02/bench/: main.cpp
challenge.02/example/: main.cpp
challenge.02/include/asumaneev/: task.hpp
challenge.02/src/asumaneev/: CMakeLists.txt  task.cpp
challenge.02/test/: CMakeLists.txt
challenge.02/test/src/: test.cpp
